--- a/index.html
+++ b/index.html
@@ -18,10 +18,28 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <!-- <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500"> -->
+  <img src="https://images.unsplash.com/photo-1512453979798-5ea266f8880c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="">
 
   <style>
 
+
+    :root {
+        --base: #ffc600;
+        --spacing: 10px;
+        --blur: 10px;
+    }
+
+    img {
+        padding: var(--spacing);
+        background: var(--base);
+        filter: blur(var(--blur));
+
+    }
+
+    .hl{
+        color: var(--base);
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -44,7 +62,20 @@
     }
   </style>
 
+
   <script>
+
+    const inputs = document.querySelectorAll('.controls input')
+
+    function handleUpdate() {
+        // console.log(this.value)
+        const suffix = this.dataset.sizing || '';
+        // console.log(suffix)
+        document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
+    }
+    inputs.forEach(input => input.addEventListener('change', handleUpdate))
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate))
+
   </script>
 
 </body>
